fix : netlify deplory error

--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
-NETLIFY_NEXT_PLUGIN_SKIP=true
+#NETLIFY_NEXT_PLUGIN_SKIP=true
+
+build:
+10:41:02 AM:     command: yarn build
+10:41:02 AM:     commandOrigin: ui
+10:41:02 AM:     environment:
+10:41:02 AM:       - NEXT_PRIVATE_TARGET
+10:41:02 AM:     publish: /opt/build/repo/.next
+10:41:02 AM:     publishOrigin: ui
+10:41:02 AM:   plugins:
+10:41:02 AM:     - inputs: {}
+10:41:02 AM:       origin: ui
+10:41:02 AM:       package: '@netlify/plugin-nextjs'
